# BigGameServer

./: .gitignore  CMakeLists.txt  README.md
src/: HttpClient.cpp  HttpClient.h  httplib.h  main.cpp
src/game/: AuthRestEndpoint.cpp  AuthRestEndpoint.h  AvailabilityEndpoint.h  GetKeyEndpoint.cpp  GetKeyEndpoint.h  ShipBattleMain.h  UserController.cpp  UserController.h
src/levelserver/: GameServer.h  Session.h
src/tests/: BGSTestExecutor.cpp  BGSTestExecutor.h  ITestExecutor.h  IUnitTest.h
src/tests/BGStests/: TestBGSCrypto.cpp  TestBGSCrypto.h  TestRSAKeyPair.cpp  TestRSAKeyPair.h
src/utils/: BGSCrypto.h  Helper.h  IMain.h  ISqlQueryExecutor.h  MariaDbSqlQueryExecutor.cpp  MariaDbSqlQueryExecutor.h  RSAKeyPair.h  SqlQueryExecutor.cpp  SqlQueryExecutor.h  SqlTable.cpp  SqlTable.h  StringHelper.h
src/webserver/: RestEndpoint.h  RestEndpointController.cpp  RestEndpointController.h  Session.h  SessionManager.h  UserDataBase.cpp  UserDataBase.h  WebSession.cpp  WebSession.h  Webserver.cpp  Webserver.h
